kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mitechcondemo
  namespace: m3test
spec:
  ports:
    - name: mitechcondemo
      port: 8501
      targetPort: 8501
  selector:
    app: mitechcondemo
